--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,10 @@ APP_WEB_URL=http://localhost:3000
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
-#Storage (disk | aws)
+#Storage
 STORAGE_DRIVER=disk
 
-#MAIL (ethereal | ses)
+#MAIL
 MAIL_DRIVER=ethereal
 
 # Redis (Cache)
